--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         Allows to add books-->
     <div class="container mt-4">
       <div class="row">
-        <div class="addBooks col-md-4">
-          <h4>Add a book to your collection</h4>
-          <form>
+        <div class="addBooks col-md-12 col-lg-5">
+          <h2 class="text-center">Add a book to your collection</h2>
+          <form id="addBooksForm">
             <!--FORM: Title-->
-            <div class="form-divs">
-              <label for="title">Title</label><br />
+            <div class="form-group">
+              <label for="title">Title</label>
               <input
                 type="text"
                 id="title"
@@ -39,8 +39,8 @@
             </div>
 
             <!--FORM: Author-->
-            <div class="form-divs">
-              <label for="author">Author</label><br />
+            <div class="form-group">
+              <label for="author">Author</label>
               <input
                 type="text"
                 id="author"
@@ -51,7 +51,8 @@
             </div>
 
             <!--FORM: Ownership-->
-            <div class="form-divs">
+            <div class="form-group">
+              <br />
               <p>Owned or borrowed</p>
               <input
                 type="radio"
@@ -60,7 +61,7 @@
                 value="owned"
                 class="form-radio"
               />
-              <label for="owned">I own this book</label><br />
+              <label for="owned">Owned</label><br />
               <input
                 type="radio"
                 id="borrowed"
@@ -68,11 +69,12 @@
                 value="borrowed"
                 class="form-radio"
               />
-              <label for="borrowed">I borrowed this book</label>
+              <label for="borrowed">Borrowed</label>
             </div>
 
             <!--FORM: Reading Status-->
-            <div class="form-divs">
+            <div class="form-group">
+              <br />
               <p>Reading status</p>
               <input
                 type="radio"
@@ -89,13 +91,21 @@
                 value="unfinished"
                 class="form-radio"
               />
-              <label for="unfinished">Unfinished</label>
+              <label for="unfinished">Unfinished</label><br />
+              <input
+                type="radio"
+                id="notStarted"
+                name="notStrated"
+                value="Not started"
+                class="form-radio"
+              />
+              <label for="notStarted">Not started</label>
             </div>
 
             <!--FORM: Rating, uses UTF-8 symbols for stars
                         &#9733; is a black star,
                         &#9734; is a white star-->
-            <div class="form-divs">
+            <div class="form-group">
               <p>Rating</p>
               <input
                 type="radio"
@@ -147,7 +157,7 @@
             </div>
 
             <!--FORM: review-->
-            <div class="form-divs">
+            <div class="form-group">
               <label for="review">Review</label>
               <textarea
                 class="form-control"
@@ -166,6 +176,32 @@
 
         <!--BOOK TABLE: 
             Displays books added-->
+        <div class="displayBooks col-md-12 col-lg-5">
+          <h2 class="text-center">Books</h2>
+          <table class="table">
+            <thead>
+              <th>Title</th>
+              <th>Author</th>
+              <th>Ownership</th>
+              <th>Reading Status</th>
+              <th>Rating</th>
+              <th>Review</th>
+              <th>Remove</th>
+            </thead>
+
+            <tbody id="tbodyID">
+              <tr>
+                <td>Interview with the Vampire</td>
+                <td>Anne Rice</td>
+                <td>Owned</td>
+                <td>Not started</td>
+                <td>None</td>
+                <td>test</td>
+                <td class="btn btn-danger">Remove</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
