--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
             </div>
 
             <!--FORM: Submit button-->
-            <button class="btn btn-success form-control">Add</button>
+            <button class="btn btn-success form-control" id="submitBTN">Add</button>
+
+            <!--FORM: Update button-->
+            <button class="btn btn-info form-control" id="updateBTN">Update</button>
+
           </form>
         </div>
 
@@ -204,6 +208,7 @@
               <th>Reading Status</th>
               <th>Rating</th>
               <th>Review</th>
+              <th>Edit</th>
               <th>Remove</th>
             </thead>
 
