--- a/index.html
+++ b/index.html
@@ -20,8 +20,44 @@
     <!--NAVIGATION-->
     <nav class="nav-bar text-center">
       <h1>Little Library</h1>
-      <button type="button" class="btn btn-primary" id="download" onclick="convertToCsv()">Download</button>
-      <button type="button" class="btn btn-warning" id="load" onclick="loadCsv()">Load a File</button> 
+      <button
+        type="button"
+        class="btn btn-primary"
+        id="download"
+        onclick="convertToCsv()"
+      >
+        Download .CSV
+      </button>
+
+      <button
+        type="button"
+        class="btn btn-primary"
+        id="downloadTXT"
+        onclick="convertToTxt()"
+      >
+        Download .TXT
+      </button>
+
+      <button
+        type="button"
+        class="btn btn-primary"
+        id="downloadJSON"
+        onclick="convertToJSON()"
+      >
+        Download .JSON
+      </button>
+
+      <button
+      type="button"
+      class="btn btn-primary"
+      id="loadJSON"
+      onclick="loadJSON()"
+    >
+      Load a JSON file
+    </button>
+    
+      <label for="file">Load a file:</label>
+      <input type="file" id="file" name="file" accept=".txt, .csv" />
     </nav>
 
     <!--FORM: ADD
@@ -190,7 +226,13 @@
             </div>
 
             <!--FORM: Submit button-->
-            <button class="btn btn-success form-control" id="submitBTN">Add</button>
+            <button
+              type="submit"
+              class="btn btn-success form-control"
+              id="submitBTN"
+            >
+              Add
+            </button>
           </form>
         </div>
 
